--- a/stack.yaml
+++ b/stack.yaml
@@ -37,9 +37,13 @@ resolver: lts-7.13
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - '.'
+- location: https://github.com/haishengwu-okta/tasty-ant-xml/blob/hw-testcase-classname/extra-deps/tasty-0.12.0.0.tar.gz?raw=true
+  extra-dep: true
+
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- tasty-0.12.0.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
